# uniswap-autotest-python

./: .gitignore  README.md  conftest.py  pyproject.toml
extensions/metamask/: background-0.js  background-1.js  background-10.js  background-11.js  background-12.js  background-13.js  background-14.js  background-15.js  background-2.js  background-3.js  background-4.js  background-5.js  background-6.js  background-7.js  background-8.js  background-9.js  background.html  common-0.js  common-1.js  common-10.js  common-11.js  common-12.js  common-13.js  common-14.js  common-15.js  common-16.js  common-17.js  common-18.js  common-19.js  common-2.js  common-3.js  common-4.js  common-5.js  common-6.js  common-7.js  common-8.js  common-9.js  content-script-0.js  index.css  manifest.json  (+27 more)
extensions/metamask/scripts/: app-init.js  policy-load.js  sentry-install.js
extensions/metamask/snaps/: bundle.js
pages/: swap.py
